--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,8 @@ body {
   background-color: #000;
   color: white;
   margin: 0;
+  min-height: 100vh;
 }
-
 .scrollbar-hide::-webkit-scrollbar {
   display: none;
 }
@@ -20,4 +20,5 @@ body {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+
 
